add single-repo & single.js

--- a/single-repo.html
+++ b/single-repo.html
@@ -19,6 +19,10 @@
       </a>
     </div>
 
+    <div id="limit-warning">
+
+    </div>
+
   </header>
 
   <main>
@@ -28,7 +32,6 @@
     </div>
   </main>
 
-  <script src="./assets/js/single.js"></script>
 </body>
 
 </html>
